--- a/Pages/Register.cshtml
+++ b/Pages/Register.cshtml
@@ -89,7 +89,7 @@
 
                     <div class="d-flex gap-2 mt-4">
                         <button type="submit" class="btn btn-primary px-4">Create Account</button>
-                        <a class="btn btn-outline-light" asp-page="/Login">I already have an account</a>
+                        <a class="btn btn-outline-light" asp-page="/Login">Back to Login</a>
                     </div>
                 </form>
             </div>
